<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/upperChildLayout"
    android:layout_marginLeft="@dimen/margin_medium_2"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCategoryName"
        android:fontFamily="@font/inter_bold"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:textSize="@dimen/text_regular_3x"
        android:text="Action for drama,commerce"
        android:textColor="@color/black"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCategoryDetail"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_toEndOf="@id/tvCategoryName"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:layout_width="24dp"
        android:layout_height="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBookList"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_below="@id/tvCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>