<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/frgEbook"
    android:layout_height="match_parent"
    tools:context=".fragments.EbookFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEbooks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    />

</RelativeLayout>