<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerRecent"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        />
  <!--  <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/viewPagerRecent"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />-->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayoutHome"
        android:layout_marginTop="@dimen/margin_large_n"
        app:tabBackground="@color/colorPrimary"
        app:tabIndicatorColor="@color/colorAccent"
        app:tabSelectedTextColor="@color/colorAccent"
        app:tabIndicatorHeight="2dp"
        app:tabIndicatorFullWidth="false"
        app:tabTextAppearance="@style/tabTextStyle"
        android:layout_below="@id/viewPagerRecent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpHome"
        android:layout_marginTop="@dimen/margin_large_n"
        android:layout_below="@id/tablayoutHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>
</androidx.core.widget.NestedScrollView>