...
            android:layout_height="10dp"/>
    </FrameLayout>
</FrameLayout>


    <TextView
        android:id="@+id/tvBookName"
        android:textColor="@color/colorSecondaryText"
        android:text="Gone With The Wind"
        android:textSize="@dimen/text_small"
        android:layout_below="@id/flBookCover"
        android:layout_marginTop="5dp"
        android:layout_width="150dp"
...
